--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.544.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-github-calendar": "^5.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
