--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-github-calendar": "^5.0.0",
+    "react-router-dom": "^7.10.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
